force-app/main/default/objects/Event_Product__c/Event_Product__c.object-meta.xml
<CustomObject>
    <label>Event Product</label>
    <nameField>
        <label>Event Product	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>