force-app/main/default/objects/Event_Product__c/fields/Allow_Guest_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Allow_Guest_Registrations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine whether guest registrations need to be enabled for this Event Product</description>
    <inlineHelpText>Please check if the guest registration needs to be allowed for this event product</inlineHelpText>
    <label>Allow Guest Registrations</label>
    <type>Checkbox</type>
</CustomField>