force-app/main/default/objects/Event_Product__c/fields/Allow_Primary_Session__c.field-meta.xml
<CustomField>
    <fullName>Allow_Primary_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify whether to allow the user to attach the Primary Session when creating Event Registrations through the form.</description>
    <inlineHelpText>Please select to allow the user to add primary sessions while registering.</inlineHelpText>
    <label>Allow Primary Session Registration</label>
    <type>Checkbox</type>
</CustomField>