force-app/main/default/objects/Event_Product__c/fields/Anonymous_Only__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked, any tickets selected of this type should not appear on screen 2 of the registration process, and it should treat them as if &quot;Someone Else (anonymous) has been selected</description>
    <inlineHelpText>When this is checked, any tickets selected of this type should not appear on screen 2 of the registration process, and it should treat them as if &quot;Someone Else (anonymous) has been selected</inlineHelpText>
    <label>Anonymous Only</label>
    <type>Checkbox</type>
</CustomField>