force-app/main/default/objects/Event_Product__c/fields/Enable_Primary_Session_Pick_List__c.field-meta.xml
<CustomField>
    <fullName>Enable_Primary_Session_Pick_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Primary Session Pick List</description>
    <inlineHelpText>Enable Primary Session Pick List</inlineHelpText>
    <label>Enable Primary Session Pick List</label>
    <type>Checkbox</type>
</CustomField>