force-app/main/default/objects/Event_Product__c/fields/Enable_Session_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Enable_Session_Registrations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Session Registrations after Event order Booking is successfull</description>
    <inlineHelpText>Enable Session Registrations</inlineHelpText>
    <label>Enable Session Registrations</label>
    <type>Checkbox</type>
</CustomField>