force-app/main/default/objects/Event_Product__c/fields/Event_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Product_Description__c</fullName>
    <description>This is the information about the Event Product which will be shown up on Event Web Page.</description>
    <inlineHelpText>Please provide a description of this event product. The value entered will be visible to people via the web event registration process.</inlineHelpText>
    <label>Event Product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>