force-app/main/default/objects/Event_Product__c/fields/Event_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Event_Product_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Event Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>