force-app/main/default/objects/Event_Product__c/fields/Event_Product_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Event_Product_Pricing__c</fullName>
    <label>Event Product Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>