force-app/main/default/objects/Event_Product__c/fields/Event_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Product_Type__c</fullName>
    <label>Event Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Ticket</fullName>
                <default>true</default>
                <label>Event Ticket</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>