force-app/main/default/objects/Event_Product__c/fields/Event_Question_Set__c.field-meta.xml
<CustomField>
    <fullName>Event_Question_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to relate the question set for this event product</description>
    <inlineHelpText>Please choose an appropriate question set for this event product</inlineHelpText>
    <label>Event Question Set</label>
    <referenceTo>Event_Question_Set__c</referenceTo>
    <relationshipLabel>Event Products</relationshipLabel>
    <relationshipName>Event_Products</relationshipName>
    <type>Lookup</type>
</CustomField>