force-app/main/default/objects/Event_Product__c/fields/Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify whether the &apos;Allow Primary Session&apos; should be a mandatory field in the event registration form</description>
    <inlineHelpText>Please check if you want &apos;Allow Primary Session&apos; to be a mandatory field in the event registration form.</inlineHelpText>
    <label>Is Mandatory?</label>
    <type>Checkbox</type>
</CustomField>