force-app/main/default/objects/Event_Product__c/fields/Max_Product_per_Order__c.field-meta.xml
<CustomField>
    <fullName>Max_Product_per_Order__c</fullName>
    <inlineHelpText>The maximum number of event products that a person can register for further to an event order</inlineHelpText>
    <label>Maximum Products Per Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>