force-app/main/default/objects/Event_Product__c/fields/Minimum_Products_Per_Order__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Products_Per_Order__c</fullName>
    <inlineHelpText>The minimum number of event products that a person can register for further to an event order</inlineHelpText>
    <label>Minimum Products Per Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>