force-app/main/default/objects/Event_Product__c/fields/Primary_Session_Interest_Heading__c.field-meta.xml
<CustomField>
    <fullName>Primary_Session_Interest_Heading__c</fullName>
    <description>Rich text field to hold the heading configuration for the Primary session Interest Heading in the Registration form</description>
    <inlineHelpText>Heading configured Primary session Interest Heading</inlineHelpText>
    <label>Primary Session Interest Heading</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>