force-app/main/default/objects/Event_Product__c/fields/Primary_Session_Interest_Label__c.field-meta.xml
<CustomField>
    <fullName>Primary_Session_Interest_Label__c</fullName>
    <description>Label configuration for the Primary session Interest Label in the Registration form</description>
    <inlineHelpText>Configured label for the Primary session Interest Label</inlineHelpText>
    <label>Primary Session Interest Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>