force-app/main/default/objects/Event_Product__c/fields/Quantity_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Allocated__c</fullName>
    <inlineHelpText>The value in this field is auto populated further to related Event Registrations</inlineHelpText>
    <label>Quantity Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>