force-app/main/default/objects/Event_Product__c/fields/Quantity_Allocated_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Allocated_Percentage__c</fullName>
    <description>Quantity Allocated Percentage</description>
    <formula>IF(AND(NOT(ISBLANK(Quantity_Allocated__c)),NOT(ISBLANK(Total_Quantity_Available__c ))), 
(Quantity_Allocated__c/Total_Quantity_Available__c ), 
 null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity Allocated Percentage</inlineHelpText>
    <label>Quantity Allocated %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>