force-app/main/default/objects/Event_Product__c/fields/Quantity_Notification__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Notification__c</fullName>
    <inlineHelpText>The % at which a notification message is triggered to the Salesforce User displayed below</inlineHelpText>
    <label>Quantity Notification %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>