force-app/main/default/objects/Event_Product__c/fields/Total_Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_Available__c</fullName>
    <inlineHelpText>The total available event products for this record.</inlineHelpText>
    <label>Total Quantity Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>