force-app/main/default/objects/Event_Product__c/validationRules/Quantity_Notification.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Notification</fullName>
    <active>true</active>
    <description>The ‘Quantity Notification %’ must be completed with the ‘User Notification’ field &amp; vica versa.</description>
    <errorConditionFormula>OR( 
     AND( NOT( ISBLANK( User_Notification__c ) ) , 
          ISBLANK( Quantity_Notification__c ) ) ,
     AND( NOT( ISBLANK( Quantity_Notification__c ) ) , 
          ISBLANK( User_Notification__c ) ) )</errorConditionFormula>
    <errorMessage>Quantity Notification %  User Notification fields both need to be completed to save.</errorMessage>
</ValidationRule>