force-app/main/default/objects/Event_Product__c/validationRules/Validate_Max_Min_Products_Per_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Max_Min_Products_Per_Order</fullName>
    <active>true</active>
    <description>Minimum products for order  cannot be greater than Maximum product per order</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Minimum_Products_Per_Order__c)),
  Minimum_Products_Per_Order__c  &gt; Max_Product_per_Order__c
)</errorConditionFormula>
    <errorMessage>Minimum products for order  cannot be greater than Maximum product per order</errorMessage>
</ValidationRule>